holiday part ended

--- a/apple-store.html
+++ b/apple-store.html
@@ -325,6 +325,7 @@
 
           <div class="personalization-cards-scroller">
             <div class="personalization-cards">
+              <!-- 1st-large-div -->
               <div class="personalization-card-first">
                 <img
                   src="image-store/persona-gift.png"
@@ -335,6 +336,7 @@
                 </div>
               </div>
 
+              <!-- small ones -->
               <div
                 class="personalization-card personalization-card--airpods-max"
               >
@@ -345,11 +347,26 @@
                   />
                 </div>
                 <div class="personalization-card-colorbox">
-                  <div class="personalization-card__color"></div>
-                  <div class="personalization-card__color"></div>
-                  <div class="personalization-card__color"></div>
-                  <div class="personalization-card__color"></div>
-                  <div class="personalization-card__color"></div>
+                  <img
+                    src="image-store/persona-airpodsmax-col1.png"
+                    class="personalization-card__color"
+                  />
+                  <img
+                    src="image-store/persona-airpodsmax-col2.png"
+                    class="personalization-card__color"
+                  />
+                  <img
+                    src="image-store/persona-airpodsmax-col3.png"
+                    class="personalization-card__color"
+                  />
+                  <img
+                    src="image-store/persona-airpodsmax-col4.png"
+                    class="personalization-card__color"
+                  />
+                  <img
+                    src="image-store/persona-airpodsmax-col5.png"
+                    class="personalization-card__color"
+                  />
                 </div>
                 <div class="personalization-card-text">
                   <div class="personalization-card__option">Free Engraving</div>
@@ -431,7 +448,203 @@
       </section>
 
       <!-- Holiday Picks -->
-      <section></section>
+      <section class="holiday-container">
+        <div class="holiday-content">
+          <div class="holiday-heads">
+            <div class="holiday-head holiday-head--heading">Holiday Picks.</div>
+            <div class="holiday-head holiday-head--subheading">
+              Add more magic to the moment.
+            </div>
+          </div>
+          <div class="holiday-cards-scroller">
+            <div class="holiday-cards">
+              <!-- 1st-large-div -->
+              <div class="holiday-card-first">
+                <img
+                  src="image-store/holi-favorites.png"
+                  class="holiday-card-first__img"
+                />
+                <div class="holiday-card-first__msg">
+                  Surprise your favorites with these favorites.
+                </div>
+              </div>
+
+              <!-- small-ones -->
+              <div class="holiday-card">
+                <div class="holiday-card-imgbox">
+                  <img
+                    src="image-store/holi-iphone-silicone-case.png"
+                    class="holiday-card__img"
+                  />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img
+                    src="image-store/holi-silicone1.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-silicone2.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-silicone3.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-silicone4.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-silicone5.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-silicone6.png"
+                    class="holiday-card__color"
+                  />
+                </div>
+                <div class="holiday-card-text">
+                  <div class="holiday-card__option">New</div>
+                  <div class="holiday-card__name">
+                    iPhone 16 Silicone Case with MagSafe - Star Fruit
+                  </div>
+                  <div class="holiday-card__price">$49.00</div>
+                </div>
+              </div>
+
+              <div class="holiday-card holiday-card--homepod-mini">
+                <div class="holiday-card-imgbox">
+                  <img
+                    src="image-store/holi-homepod-mini.png"
+                    class="holiday-card__img"
+                  />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img
+                    src="image-store/holi-homepod1.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-homepod2.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-homepod3.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-homepod4.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-homepod5.png"
+                    class="holiday-card__color"
+                  />
+                </div>
+                <div class="holiday-card-text">
+                  <div class="holiday-card__name">HomePod mini - White</div>
+                  <div class="holiday-card__price">$99.00</div>
+                </div>
+              </div>
+
+              <div class="holiday-card holiday-card--smart-folio">
+                <div class="holiday-card-imgbox">
+                  <img
+                    src="image-store/holi-smartfolio-ipadair.png"
+                    class="holiday-card__img"
+                  />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img
+                    src="image-store/holi-smartfolio1.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-smartfolio2.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-smartfolio3.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-smartfolio4.png"
+                    class="holiday-card__color"
+                  />
+                </div>
+                <div class="holiday-card-text">
+                  <div class="holiday-card__name">
+                    Smart Folio for iPad Air 11 - inch (M2) - Sage
+                  </div>
+                  <div class="holiday-card__price">$79.00</div>
+                </div>
+              </div>
+
+              <div class="holiday-card holiday-card--onear-wireless">
+                <div class="holiday-card-imgbox">
+                  <img
+                    src="image-store/holi-onear-wireless-headphones.png"
+                    class="holiday-card__img"
+                  />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img
+                    src="image-store/holi-onear-wireless1.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-onear-wireless2.png"
+                    class="holiday-card__color"
+                  />
+                  <img
+                    src="image-store/holi-onear-wireless3.png"
+                    class="holiday-card__color"
+                  />
+                </div>
+                <div class="holiday-card-text">
+                  <div class="holiday-card__option">New</div>
+                  <div class="holiday-card__name">
+                    Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue
+                  </div>
+                  <div class="holiday-card__price">$79.00</div>
+                </div>
+              </div>
+
+              <div class="holiday-card">
+                <div class="holiday-card-imgbox">
+                  <img />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img />
+                  <img />
+                  <img />
+                </div>
+                <div class="holiday-card-text">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+
+              <div class="holiday-card">
+                <div class="holiday-card-imgbox">
+                  <img />
+                </div>
+                <div class="holiday-card-colorbox">
+                  <img />
+                  <img />
+                  <img />
+                </div>
+                <div class="holiday-card-text">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Only at Apple -->
       <section class="onlyapple-container">
