--- a/apple-store.html
+++ b/apple-store.html
@@ -325,7 +325,7 @@
 
           <div class="personalization-cards-scroller">
             <div class="personalization-cards">
-              <!-- 1st-large-div -->
+              <!-- 1st-large -->
               <div class="personalization-card-first">
                 <img
                   src="image-store/persona-gift.png"
@@ -337,6 +337,7 @@
               </div>
 
               <!-- small ones -->
+              <!-- 1stsmall -->
               <div
                 class="personalization-card personalization-card--airpods-max"
               >
@@ -377,6 +378,7 @@
                 </div>
               </div>
 
+              <!-- 2ndsmall -->
               <div class="personalization-card">
                 <div class="personalization-card-imgbox">
                   <img
@@ -391,6 +393,7 @@
                 </div>
               </div>
 
+              <!-- 3rdsmall -->
               <div class="personalization-card personalization-card--airpods-4">
                 <div class="personalization-card-imgbox">
                   <img
@@ -407,6 +410,7 @@
                 </div>
               </div>
 
+              <!-- 4thsmall -->
               <div class="personalization-card">
                 <div class="personalization-card-imgbox">
                   <img
@@ -421,6 +425,7 @@
                 </div>
               </div>
 
+              <!-- 5thsmall-blank -->
               <div class="personalization-card">
                 <div class="personalization-card-imgbox">
                   <img class="personalization-card__img" />
@@ -432,6 +437,7 @@
                 </div>
               </div>
 
+              <!-- 6thsmall-blank -->
               <div class="personalization-card">
                 <div class="personalization-card-imgbox">
                   <img class="personalization-card__img" />
@@ -458,7 +464,7 @@
           </div>
           <div class="holiday-cards-scroller">
             <div class="holiday-cards">
-              <!-- 1st-large-div -->
+              <!-- 1st-large -->
               <div class="holiday-card-first">
                 <img
                   src="image-store/holi-favorites.png"
@@ -470,6 +476,7 @@
               </div>
 
               <!-- small-ones -->
+              <!-- 1stone -->
               <div class="holiday-card">
                 <div class="holiday-card-imgbox">
                   <img
@@ -512,6 +519,7 @@
                 </div>
               </div>
 
+              <!-- 2ndsmall -->
               <div class="holiday-card holiday-card--homepod-mini">
                 <div class="holiday-card-imgbox">
                   <img
@@ -547,6 +555,7 @@
                 </div>
               </div>
 
+              <!-- 3rdsmall -->
               <div class="holiday-card holiday-card--smart-folio">
                 <div class="holiday-card-imgbox">
                   <img
@@ -580,6 +589,7 @@
                 </div>
               </div>
 
+              <!-- 4thsmall -->
               <div class="holiday-card holiday-card--onear-wireless">
                 <div class="holiday-card-imgbox">
                   <img
@@ -610,6 +620,7 @@
                 </div>
               </div>
 
+              <!-- 5thsmall-blank -->
               <div class="holiday-card">
                 <div class="holiday-card-imgbox">
                   <img />
@@ -626,6 +637,7 @@
                 </div>
               </div>
 
+              <!-- 6thsmall-blank -->
               <div class="holiday-card">
                 <div class="holiday-card-imgbox">
                   <img />
@@ -662,7 +674,7 @@
           <div class="onlyapple-cards-scroller">
             <!-- dives -->
             <div class="onlyapple-cards">
-              <!-- 1st-large-div -->
+              <!-- 1st-large -->
               <div class="onlyapple-cardxl">
                 <img
                   src="image-store/oapple-gift.png"
@@ -677,7 +689,7 @@
               </div>
 
               <div class="onlyapple-cardxs-box">
-                <!-- 1st-small-div -->
+                <!-- 1st-small -->
                 <div class="onlyapple-cardxs">
                   <div
                     class="onlyapple-cardxs__msg onlyapple-cardxs__msg--custom"
@@ -685,7 +697,7 @@
                     Customize your Mac and create your own style of Apple Watch.
                   </div>
                 </div>
-                <!-- 2nd-small-div -->
+                <!-- 2nd-small -->
                 <div class="onlyapple-cardxs">
                   <div class="onlyapple-cardxs__msg onlyapple-cardxs__msg--pay">
                     Pay in full or pay over time. Your choice.
@@ -694,7 +706,7 @@
               </div>
 
               <div class="onlyapple-cardxs-box">
-                <!-- 3rd-small-div -->
+                <!-- 3rd-small -->
                 <div class="onlyapple-cardxs">
                   <div
                     class="onlyapple-cardxs__msg onlyapple-cardxs__msg--free"
@@ -702,7 +714,7 @@
                     Free extended returns between now and 1/8/25.
                   </div>
                 </div>
-                <!-- 4th-small-div -->
+                <!-- 4th-small -->
                 <div class="onlyapple-cardxs">
                   <div
                     class="onlyapple-cardxs__msg onlyapple-cardxs__msg--engrave"
@@ -713,7 +725,7 @@
                 </div>
               </div>
 
-              <!-- 2-nd-large-div -->
+              <!-- 2-nd-large -->
               <div class="onlyapple-cardxl">
                 <img
                   src="image-store/oapple-trade-in.png"
@@ -728,7 +740,7 @@
                   new one.³
                 </div>
               </div>
-              <!-- 3-rd-large-div -->
+              <!-- 3-rd-large -->
               <div class="onlyapple-cardxl">
                 <img
                   src="image-store/oapple-specialist.jpg"
@@ -739,7 +751,7 @@
                   class="onlyapple-cardxl__msg onlyapple-cardxl__msg--specialist"
                 >
                   Find gifts with an Apple<br />
-                  Specialist in a store or online.
+                  Specialist in a store or sonline.
                 </div>
               </div>
             </div>
@@ -747,6 +759,34 @@
         </div>
       </section>
 
+      <!-- Apple Experience -->
+      <section class="appexp-container">
+        <div>
+          <div class="appexp-heads">
+            <div class="appexp-head appexp-head--heading">
+              The Apple Experience.
+            </div>
+            <div class="appexp-head appexp-head--subheading">
+              Even more awe in store.
+            </div>
+          </div>
+          <div>
+            <!-- 1stone -->
+            <div>
+              <img />
+              <div>APPLE MUSIC</div>
+              <div>Get 3 months of Apple Music free.</div>
+              <div>Included with the purchase of select Apple devices.</div>
+            </div>
+            <!-- 2ndone -->
+            <div></div>
+            <!-- 3rdone -->
+            <div></div>
+            <!-- 4thone -->
+            <div></div>
+          </div>
+        </div>
+      </section>
       <!-- Special Savings -->
       <section></section>
 
