apple exp ended

--- a/apple-store.html
+++ b/apple-store.html
@@ -324,6 +324,7 @@
           </div>
 
           <div class="personalization-cards-scroller">
+            <!-- divs -->
             <div class="personalization-cards">
               <!-- 1st-large -->
               <div class="personalization-card-first">
@@ -463,6 +464,7 @@
             </div>
           </div>
           <div class="holiday-cards-scroller">
+            <!-- divs -->
             <div class="holiday-cards">
               <!-- 1st-large -->
               <div class="holiday-card-first">
@@ -672,7 +674,7 @@
           </div>
           <!-- scroller -->
           <div class="onlyapple-cards-scroller">
-            <!-- dives -->
+            <!-- divs -->
             <div class="onlyapple-cards">
               <!-- 1st-large -->
               <div class="onlyapple-cardxl">
@@ -761,7 +763,7 @@
 
       <!-- Apple Experience -->
       <section class="appexp-container">
-        <div>
+        <div class="appexp-content">
           <div class="appexp-heads">
             <div class="appexp-head appexp-head--heading">
               The Apple Experience.
@@ -770,25 +772,184 @@
               Even more awe in store.
             </div>
           </div>
-          <div>
+
+          <!-- divs -->
+          <div class="appexp-cards">
             <!-- 1stone -->
-            <div>
-              <img />
-              <div>APPLE MUSIC</div>
-              <div>Get 3 months of Apple Music free.</div>
-              <div>Included with the purchase of select Apple devices.</div>
+            <div class="appexp-card">
+              <img
+                src="image-store/appexp-music-free.png"
+                class="appexp-card__img"
+              />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__product-title">APPLE MUSIC</div>
+                <div class="appexp-card__promo-title">
+                  Get 3 months of<br />
+                  Apple Music free.
+                </div>
+                <div class="appexp-card__description">
+                  Included with the purchase of<br />
+                  select Apple devices.
+                </div>
+              </div>
             </div>
+
             <!-- 2ndone -->
-            <div></div>
+            <div class="appexp-card appexp-card--free-tv">
+              <img
+                src="image-store/appexp-tv-free.png"
+                class="appexp-card__img"
+              />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__product-title">APPLE TV+</div>
+                <div class="appexp-card__promo-title">
+                  Get 3 months free when you<br />
+                  buy an Apple device.
+                </div>
+              </div>
+            </div>
+
             <!-- 3rdone -->
-            <div></div>
+            <div class="appexp-card appexp-card--subscription">
+              <img
+                src="image-store/appexp-subscription.png"
+                class="appexp-card__img"
+              />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__promo-title">
+                  Six Apple services.<br />
+                  One easy subscription.
+                </div>
+              </div>
+            </div>
+
             <!-- 4thone -->
-            <div></div>
+            <div class="appexp-card">
+              <img src="image-store/appexp-ai.jpg" class="appexp-card__img" />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__product-title">APPLE INTELLIGENCE</div>
+                <div class="appexp-card__promo-title">
+                  New features for writing,<br />
+                  focus,communication, and<br />
+                  more.
+                </div>
+              </div>
+            </div>
+
+            <!-- 5thone-added -->
+            <div class="appexp-card">
+              <img src="image-store/appexp-camp.jpg" class="appexp-card__img" />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__product-title">TODAY AT APPLE</div>
+                <div class="appexp-card__promo-title">
+                  Join the fun at Apple Camp
+                </div>
+                <div class="appexp-card__description">
+                  We invite kids 6–10 to make a friendship<br />
+                  film on iPad in a free session.
+                </div>
+              </div>
+            </div>
+
+            <!-- 6thone-added -->
+            <div class="appexp-card">
+              <img src="image-store/appexp-home.jpg" class="appexp-card__img" />
+
+              <div class="appexp-card-text">
+                <div class="appexp-card__product-title">HOME</div>
+                <div class="appexp-card__promo-title">
+                  See how one app can<br />
+                  control your entire home.
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+
       <!-- Special Savings -->
-      <section></section>
+      <section class="savings-container">
+        <div class="savings-content">
+          <div class="savings-heads">
+            <div class="savings-head savings-head--heading"></div>
+            <div class="savings-head savings-head--subheading"></div>
+          </div>
+
+          <!-- divs -->
+          <div class="savings-cards">
+            <!-- 1stone -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__description"></div>
+              </div>
+            </div>
+
+            <!-- 2ndone -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+              </div>
+            </div>
+
+            <!-- 3rdone -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+              </div>
+            </div>
+
+            <!-- 4thone -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+              </div>
+            </div>
+
+            <!-- 5thone -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+              </div>
+            </div>
+
+            <!-- 6thone-added -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__description"></div>
+              </div>
+            </div>
+
+            <!-- 7thone-added -->
+            <div class="savings-card">
+              <img class="savings-card__img" />
+              <div class="savings-card-text">
+                <div class="savings-card__product-title"></div>
+                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__description"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <footer></footer>
     </main>
