page2 dussan dahin hyanah

--- a/apple-store.html
+++ b/apple-store.html
@@ -876,82 +876,135 @@
       <section class="savings-container">
         <div class="savings-content">
           <div class="savings-heads">
-            <div class="savings-head savings-head--heading"></div>
-            <div class="savings-head savings-head--subheading"></div>
+            <div class="savings-head savings-head--heading">
+              Special Savings.
+            </div>
+            <div class="savings-head savings-head--subheading">
+              iPhone carrier deals and exclusive savings for school,<br />
+              businesses, and more.
+            </div>
           </div>
 
           <!-- divs -->
           <div class="savings-cards">
             <!-- 1stone -->
             <div class="savings-card">
-              <img class="savings-card__img" />
+              <img
+                src="image-store/sav-carrier.png"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
-                <div class="savings-card__description"></div>
+                <div class="savings-card__product-title">CARRIER DEALS</div>
+                <div class="savings-card__promo-title">
+                  Apple. Your one‑stop<br />
+                  shop for incredible carrier<br />
+                  deals.
+                </div>
+                <div class="savings-card__description">
+                  Get up to $1000 in credit on a new<br />
+                  iPhone with AT&T, Boost Mobile, T‑Mobile,<br />
+                  or Verizon. Trade‑in may be<br />
+                  required.⁴
+                </div>
               </div>
             </div>
 
             <!-- 2ndone -->
             <div class="savings-card">
-              <img class="savings-card__img" />
+              <img
+                src="image-store/sav-education.png"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__product-title">EDUCATION</div>
+                <div class="savings-card__promo-title">
+                  Buy a new Mac or iPad<br />
+                  with education savings.
+                </div>
               </div>
             </div>
 
             <!-- 3rdone -->
             <div class="savings-card">
-              <img class="savings-card__img" />
+              <img
+                src="image-store/sav-certified.png"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__product-title">
+                  CERTIFIED REFURBISHED
+                </div>
+                <div class="savings-card__promo-title">
+                  Shop refurbished Apple<br />
+                  products backed by a<br />
+                  one‑year warranty.
+                </div>
               </div>
             </div>
 
             <!-- 4thone -->
-            <div class="savings-card">
-              <img class="savings-card__img" />
+            <div class="savings-card savings-card--business">
+              <img
+                src="image-store/sav-business.png"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__product-title">BUSINESS</div>
+                <div class="savings-card__promo-title">
+                  From enterprise to<br />
+                  small business, we’ll<br />
+                  work with you.
+                </div>
               </div>
             </div>
 
             <!-- 5thone -->
             <div class="savings-card">
-              <img class="savings-card__img" />
+              <img
+                src="image-store/sav-government.jpg"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
+                <div class="savings-card__product-title">GOVERNMENT</div>
+                <div class="savings-card__promo-title">
+                  Special pricing is available<br />
+                  for state, local, and federal<br />
+                  agencies.
+                </div>
               </div>
             </div>
 
             <!-- 6thone-added -->
             <div class="savings-card">
-              <img class="savings-card__img" />
+              <img
+                src="image-store/sav-veterans.jpg"
+                class="savings-card__img"
+              />
               <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
-                <div class="savings-card__description"></div>
-              </div>
-            </div>
-
-            <!-- 7thone-added -->
-            <div class="savings-card">
-              <img class="savings-card__img" />
-              <div class="savings-card-text">
-                <div class="savings-card__product-title"></div>
-                <div class="savings-card__promo-title"></div>
-                <div class="savings-card__description"></div>
+                <div class="savings-card__product-title">
+                  VETERANS AND MILITARY
+                </div>
+                <div class="savings-card__promo-title">
+                  Active and veteran<br />
+                  members may be eligible<br />
+                  for exclusive savings.
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <footer></footer>
+      <!-- Quick Links -->
+      <section class="connection-container">
+        <div class="connection-title">Quick Links</div>
+        <div class="connection-links">
+          <button class="connection-link">Order Status</button>
+          <button class="connection-link">Shopping Help</button>
+          <button class="connection-link">Returns</button>
+          <button class="connection-link">Your Saves</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
