apple main and store

--- a/apple-main.html
+++ b/apple-main.html
@@ -15,28 +15,35 @@
     <main>
       <!-- header -->
       <header>
-        <a href="https://www.apple.com/" class="header-logo"></a>
+        <a href="https://www.apple.com/" class="header-logo">
+          <img src="images/header-logo.svg" />
+        </a>
+
         <nav class="header-nav">
-          <a href="https://www.apple.com/" class="header-nav__item">Store</a>
-          <a href="https://www.apple.com/" class="header-nav__item">Mac</a>
-          <a href="https://www.apple.com/" class="header-nav__item">iPad</a>
-          <a href="https://www.apple.com/" class="header-nav__item">iPhone</a>
-          <a href="https://www.apple.com/" class="header-nav__item">Watch</a>
-          <a href="https://www.apple.com/" class="header-nav__item">Vision</a>
-          <a href="https://www.apple.com/" class="header-nav__item">Airpods</a>
-          <a href="https://www.apple.com/" class="header-nav__item"
-            >TV & Home</a
-          >
-          <a href="https://www.apple.com/" class="header-nav__item"
-            >Entertainment</a
-          >
-          <a href="https://www.apple.com/" class="header-nav__item"
-            >Accessories</a
-          ><a href="https://www.apple.com/" class="header-nav__item">Support</a>
+          <a href="-" class="item">Store</a>
+          <a href="-" class="item">Mac</a>
+          <a href="-" class="item">iPad</a>
+          <a href="-" class="item">iPhone</a>
+          <a href="-" class="item">Watch</a>
+          <a href="-" class="item">Vision</a>
+          <a href="-" class="item">Airpods</a>
+          <a href="-" class="item">TV & Home</a>
+          <a href="-" class="item">Entertainment</a>
+          <a href="-" class="item">Accessories</a>
+          <a href="-" class="item">Support</a>
         </nav>
-        <button class="header-button header-button--search"></button>
-        <button class="header-button header-button--bag"></button>
-        <button class="header-button header-button--more"></button>
+
+        <div class="header-buttons">
+          <button class="btn">
+            <img src="images/header-search.svg" />
+          </button>
+          <button class="btn">
+            <img src="images/header-bag.svg" />
+          </button>
+          <button class="btn btn-menu">
+            <img src="images/header-menu.svg" />
+          </button>
+        </div>
       </header>
 
       <!-- banner -->
@@ -110,6 +117,8 @@
             </div>
             <div class="apple-product__sub">Hello, Apple Intelligence.</div>
           </div>
+
+          <!-- AirPods 4 -->
           <div class="apple-product apple-product--airpodspro2">
             <div class="apple-product__title apple-product__title--airpodspro2">
               AirPods Pro 2
@@ -128,6 +137,7 @@
               </button>
             </div>
           </div>
+
           <div class="apple-product apple-product--watch">
             <div class="apple-product__title apple-product__title--watch">
               WATCH
