--- a/apple-store.html
+++ b/apple-store.html
@@ -53,14 +53,9 @@
       <!-- blurred background -->
       <section class="blurred-background"></section>
 
-      <!-- store head -->
-      <section class="store-heads-container">
-        <div class="store-heads">
-          <div class="store-head store-head--heading">Store.</div>
-          <div class="store-head store-head--subheading">
-            Gift magic this holiday.
-          </div>
-        </div>
+      <!-- Store -->
+      <section class="store-container">
+        <div class="heading"><span>Store.</span> Gift magic this holiday.</div>
 
         <div class="head-questions">
           <div class="question question--shop-help">
