iphone16-s media-que hiih

--- a/apple-main.html
+++ b/apple-main.html
@@ -55,18 +55,12 @@
       </section>
 
       <!-- iPhone 16 Pro -->
-      <section class="iphone16pro-container">
-        <div class="iphone16pro">
-          <div class="iphone16pro__title">iPhone 16 Pro</div>
-          <div class="iphone16pro__subtitle">Hello, Apple Intelligence.</div>
-          <div class="iphone16pro__buttons">
-            <button class="iphone16pro__button">Learn more</button>
-            <button
-              class="iphone16pro__button iphone16pro__button--bluebordtrans"
-            >
-              Buy
-            </button>
-          </div>
+      <section class="iphone16pro">
+        <div class="iphone16pro__title">iPhone 16 Pro</div>
+        <div class="iphone16pro__subtitle">Hello, Apple Intelligence.</div>
+        <div class="iphone16pro__buttons">
+          <button class="btn btn--major">Learn more</button>
+          <button class="btn btn--miner">Buy</button>
         </div>
       </section>
 
