--- a/apple-main.html
+++ b/apple-main.html
@@ -65,16 +65,12 @@
       </section>
 
       <!-- iPhone 16 -->
-      <section class="iphone16-container">
-        <div class="iphone16">
-          <div class="iphone16__title">iPhone 16</div>
-          <div class="iphone16__subtitle">Hello, Apple Intelligence.</div>
-          <div class="iphone16__buttons">
-            <button class="iphone16__button">Learn more</button>
-            <button class="iphone16__button iphone16__button--trans">
-              Buy
-            </button>
-          </div>
+      <section class="iphone16">
+        <div class="iphone16__title">iPhone 16</div>
+        <div class="iphone16__subtitle">Hello, Apple Intelligence.</div>
+        <div class="iphone16__buttons">
+          <button class="btn btn--major">Learn more</button>
+          <button class="btn btn--miner">Buy</button>
         </div>
       </section>
 
