--- a/apple-main.html
+++ b/apple-main.html
@@ -60,7 +60,7 @@
         <div class="iphone16pro__subtitle">Hello, Apple Intelligence.</div>
         <div class="iphone16pro__buttons">
           <button class="btn btn--major">Learn more</button>
-          <button class="btn btn--miner">Buy</button>
+          <button class="btn btn--minor">Buy</button>
         </div>
       </section>
 
@@ -70,7 +70,7 @@
         <div class="iphone16__subtitle">Hello, Apple Intelligence.</div>
         <div class="iphone16__buttons">
           <button class="btn btn--major">Learn more</button>
-          <button class="btn btn--miner">Buy</button>
+          <button class="btn btn--minor">Buy</button>
         </div>
       </section>
 
